# ETS_IOT

./: README.md
codingan_ota/: .partition.csv.swp  Cargo.toml  partition_table.csv
codingan_ota/.cargo/: config.toml
codingan_ota/src/: main.rs
codingan_sensor/: Cargo.toml  partition  partition.save
codingan_sensor/src/: main.rs
