[package]
name = "iottubes"          # nama crate/project kamu (boleh disesuaikan)
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streamdht"
path = "src/main.rs"       # pastikan ini menunjuk ke main.rs kamu
harness = false            # do not use the built in cargo test harness

[profile.release]
opt-level = "s"

[profile.dev]
debug = true               # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
rand = "0.8"
anyhow = "1.0"
heapless = "0.8"
serde_json = "1.0"
dht-sensor = "0.2"
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
embuild = "0.33"

